--- a/src/App.css
+++ b/src/App.css
@@ -167,3 +167,26 @@
 .div-button {
   margin-left: 100px;
 }
+
+@media only screen and (max-device-width: 480px) {
+  .header {
+    height: 300px;
+    display: grid;
+    grid-template-areas: "bar" "bar";
+  }
+  .bar {
+    display: grid;
+    grid-template-areas: "bar bar" "bar bar" "bar bar" "bar bar";
+  }
+  .cards {
+    margin: 40px 90px;
+    justify-content: center;
+  }
+}
+
+@media only screen and (min-device-width: 500px) {
+  .cards-container {
+    display: grid;
+    grid-template-areas: "bar" "bar";
+  }
+}
