--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,19 @@
   grid-template-areas: "card card card card";
 }
 
+.selection {
+  margin-top: 15px;
+  margin-left: 25px;
+  color: black;
+  font-weight: bold;
+}
+
+.selection select {
+  margin-left: 20px;
+  padding: 5px 5px;
+  padding-right: 20PX;
+}
+
 .cards {
   box-shadow: 0 1px 8px 1px rgb(0 0 0 / 8%);
   border-radius: 10px;
